<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">MyCloth</string>
    <string name="hello_world">Hello world! Li Chuan</string>
    <string name="action_settings">Settings</string>
    <string name="special_text">This is a test.</string>
    <string name="item_example">This is a example</string>
    <string name="toast_format_listItem">You choose this item : %s.</string>
    <string name="waiting_text">Waiting</string>
    <string name="error_title">Occur Error</string>
    <string name="loading_failed_description">I am sorry. Some component does not work. please contact your issuer.</string>
    <string name="description_title">Description</string>
    <string name="loading_success_description">OK. Welcome to My Cloth application.Please let us show description for this app.The application is a joy tool for person which like rearrange her clothes.</string>
    <string name="next_step_description">Next Step</string>
    <string name="add_new_cloth">Add new cloth</string>
    <string name="add_new_box">Add new something store clothes</string>
    <string name="add_new_suit">Add new suit</string>
    <string name="add_cloth_description">Please you choose a picture for your cloth. </string>
    <string name="go_back_prev_step">Go back</string>
    <string name="this_picture_is_ok">This picture is OK.</string>
    <string name="title_activity_pic_view">View</string>
    <string name="add_new_cloth_fill_info">Fill description for new cloth</string>
    <string name="add_new_cloth_choose_cloth_type">Please choose type of cloth:</string>
    <string name="cloth_type_upper_body">Upper Body</string>
    <string name="cloth_type_lower_body">Lower Body</string>
    <string name="add_new_cloth_input_your_description">Please input some description of cloth,for example:price,time etc.</string>
    <string name="cloth_type_error">please choose type of cloth.</string>
    <string name="description_error">Please input some description of cloth.</string>
    <string name="create_cloth_fail">Create cloth fail.</string>
    <string name="create_cloth_fail_copy_file">Create cloth fail because copy file is failed..</string>
    <string name="create_cloth_fail_save_db">Create cloth fail because save db is failed..</string>
    <string name="bad_picture_for_cloth">The picture is invalid,please choose another picture.</string>
    <string name="title_activity_cloth_list">Show all clothes</string>
    <string name="just_now">Just now</string>
    <string name="minutes">minutes before</string>
    <string name="today">Today </string>
    <string name="yesterday">Yesterday </string>
    <string name="last_week">Last week </string>
    <string name="this_month">This month </string>
    <string name="last_month">Last month </string>
    <string name="this_year">This year </string>
    <string name="last_year">Last year </string>
    <string name="early_years">Early years </string>
    <string name="error_date">In further som time</string>
    <string name="year_separator">/</string>
    <string name="month_separator">/</string>
    <string name="day_separator">/</string>
    <string name="hour_separator">/</string>
    <string name="week_SUNDAY">SUNDAY</string>
    <string name="week_MONDAY">MONDAY</string>
    <string name="week_TUESDAY">TUESDAY</string>
    <string name="week_WEDNESDAY">WEDNESDAY</string>
    <string name="week_THURSDAY">THURSDAY</string>
    <string name="week_FRIDAY">FRIDAY</string>
    <string name="week_SATURDAY">SATURDAY</string>
    <string name="title_activity_add_cloth">Add new cloth</string>
    <string name="title_activity_add_box">Add new something store clothes.</string>
    <string name="add_box_description">Add new store place for clothes.</string>
    <string name="add_new_box_fill_info">Fill info for new box</string>
    <string name="add_new_box_input_your_description">Please input some description of box,for example:color,place etc.</string>
    <string name="box_description_error">Please input some description of box.</string>
    <string name="add_new_box_choose_image">Choose a image for new box</string>
    <string name="add_new_box_image_lib_description">Please choose a image from follow image lib:</string>
    <string name="box_image_error">please a image for box.</string>
    <string name="box_image_desc">Image</string>
    <string name="create_box_fail">Create box fail.</string>
    <string name="box_other_info_format">include cloth:%d</string>
    <string name="change_grid_mode">Display mode</string>
    <string name="title_detail_of_cloth">The detail of cloth</string>
    <string name="this_cloth_type_is">The type of this cloth is :</string>
    <string name="description_of_this_cloth">The description of this cloth is :</string>
    <string name="modify">Modify...</string>
    <string name="tryIt">Try it...</string>
    <string name="deleteIt">Delete...</string>
    <string name="save_data">Save</string>
    <string name="view_cloth">View...</string>
    <string name="save_data_success">Save success.</string>
    <string name="this_cloth_location_is">The location of this cloth is :</string>
    <string name="no_box_exist">No more location for clothes.</string>
    <string name="title_activity_box_list_for_cloth">Choose a location for cloth from follow box list:</string>
    <string name="cloth_belong_to_this_box_fail">It is failed which add the cloth into the box. </string>
    <string name="invalid_box_name">None</string>
    <string name="invalid_box_desc">Be used for remove cloth from any location.</string>
    <string name="suit_other_info_format">include cloth:%d</string>
    <string name="title_detail_of_box">The detail of box</string>
    <string name="change_image_of_box_description">Please choose a picture for box from follow pictures:</string>
    <string name="change_desc_of_box_description">You will change description of box:</string>
    <string name="no_changed_for_box">No changed, No save.</string>
    <string name="title_warning">Warning</string>
    <string name="are_you_sure_delete_this_box">Are you sure delete this box?</string>
    <string name="are_you_sure_delete_this_cloth">Are you sure delete this cloth?</string>
    <string name="Yes_Btn">Yes</string>
    <string name="No_Btn">No</string>
    <string name="Close_Btn">Close</string>
    <string name="display_content_for_cloth">Cloth list:</string>
    <string name="display_content_for_box">Box list:</string>
    <string name="display_content_for_suit">Suit list:</string>
    <string name="no_cloth_in_this_box">There is not any cloth in this box.</string>
    <string name="title_clothlist_in_box">Cloth list of this box</string>
    <string name="title_activity_add_suit">Add new suit</string>
    <string name="add_suit_description">The suit is a suit of cloth.If you think more, you will have more suit.</string>
    <string name="add_new_suit_fill_description">The description of New Suit</string>
    <string name="add_new_suit_input_your_description">Please input description of new suit:</string>
    <string name="suit_description_error">Please input description of suit.</string>
    <string name="add_new_suit_choose_cloth">Please more than one cloth for new suit</string>
    <string name="add_new_suit_choose_cloth_description">Please choose clothes for new suit:</string>
    <string name="no_selected">N</string>
    <string name="is_selected">Y</string>
    <string name="choose_at_least_cloth">Please choose a cloth.</string>
    <string name="choose_at_least_upper_cloth">Please choose a cloth for upper body.</string>
    <string name="choose_at_least_lower_cloth">Please choose a cloth for lower body.</string>
    <string name="create_suit_fail">Create suit fail.</string>
    <string name="update_suit_fail">Update suit fail.</string>
    <string name="title_detail_of_suit">The detail of suit</string>
    <string name="change_desc_of_suit_description">You will change description of suit:</string>
    <string name="the_cloth_in_suit_description">The suit contains the cloth list:</string>
    <string name="publish_suit">Publish...</string>
    <string name="unimplementFunction">Sorry, This function is not implement.</string>
    <string name="title_show_picture">Show Picture</string>
    <string name="title_try_suit">Try suit</string>
    <string name="choose_image_from_photoList">Choose image from photo</string>
    <string name="get_image_from_camera">Get a image from camera</string>
    <string name="title_show_capture_image">Show Result of Capture</string>
    <string name="are_you_sure_delete_this_suit">Are you sure delete this suit?</string>
</resources>
