<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent" android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin">

    <TextView
        android:id="@+id/title"
        android:text="@string/title_detail_of_cloth"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_alignParentTop="true"
        android:textColor="@color/title"
        android:textSize="@dimen/title_font_size"/>

    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:orientation="horizontal"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/detail_top_content_height"
        android:layout_below="@id/title"
        android:id="@+id/top_content"
        android:layout_marginTop="6sp">

        <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
            android:orientation="vertical"
            android:layout_width="@dimen/detail_image_type_width"
            android:layout_height="wrap_content"
            android:id="@+id/top_content_imageType">
            <TextView
                android:id="@+id/choose_your_type_desc"
                android:text="@string/this_cloth_type_is"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:textColor="@color/description"
                android:textSize="@dimen/cloth_type_size" />

            <RadioGroup
                android:id="@+id/cloth_type_group"
                android:layout_height="wrap_content"
                android:layout_width="fill_parent"
                android:layout_marginTop="5sp"
                android:layout_below="@id/choose_your_type_desc">
                <RadioButton
                    android:id="@+id/cloth_type_upper"
                    android:layout_height="fill_parent"
                    android:layout_width="wrap_content"
                    android:text="@string/cloth_type_upper_body"
                    android:textSize="@dimen/cloth_type_size"/>
                <RadioButton
                    android:id="@+id/cloth_type_lower"
                    android:layout_height="fill_parent"
                    android:layout_width="wrap_content"
                    android:text="@string/cloth_type_lower_body"
                    android:textSize="@dimen/cloth_type_size"/>
            </RadioGroup>
        </RelativeLayout>

        <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
            android:id="@+id/top_content_location"
            android:orientation="vertical"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@id/top_content_imageType">
                <TextView
                    android:id="@+id/your_cloth_location_desc"
                    android:text="@string/this_cloth_location_is"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:textColor="@color/description"
                    android:textSize="@dimen/cloth_type_size" />

                <Button
                    android:id="@+id/location_modify"
                    android:layout_height="wrap_content"
                    android:layout_width="wrap_content"
                    android:layout_below="@id/your_cloth_location_desc"
                    android:text="@string/modify"
                    android:layout_alignParentRight="true"/>

                <ImageView
                    android:id="@+id/location_image"
                    android:layout_height="@dimen/detail_location_size"
                    android:layout_width="@dimen/detail_location_size"
                    android:src="@drawable/ic_launcher"
                    android:layout_toLeftOf="@id/location_modify"
                    android:layout_below="@id/your_cloth_location_desc" />

        </RelativeLayout>
    </RelativeLayout>

    <TextView
        android:id="@+id/your_description_desc"
        android:text="@string/description_of_this_cloth"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:textColor="@color/description"
        android:textSize="@dimen/detail_desc_size"
        android:layout_marginTop="10sp"
        android:layout_below="@id/top_content"/>


    <EditText
        android:id="@+id/your_description"
        android:text="@string/item_example"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:lines="4"
        android:layout_alignParentLeft="true"
        android:textColor="@color/description"
        android:textSize="@dimen/detail_desc_size"
        android:layout_marginTop="10sp"
        android:gravity="top"
        android:layout_below="@id/your_description_desc"/>


    <Button
        android:id="@+id/save_data"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:text="@string/save_data"
        android:layout_below="@id/your_description"
        android:layout_alignParentRight="true"/>



    <Button
        android:id="@+id/tryIt"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:text="@string/tryIt"
        android:layout_alignParentBottom="true"/>

    <Button
        android:id="@+id/deleteIt"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:text="@string/deleteIt"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"/>

    <ImageView
        android:id = "@+id/picture_show"
        android:layout_height="fill_parent"
        android:layout_width="fill_parent"
        android:src="@drawable/ic_launcher"
        android:layout_below="@id/save_data"
        android:layout_above="@id/tryIt"/>

</RelativeLayout>