<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin">

    <TextView
        android:id="@+id/title"
        android:text="@string/title_detail_of_suit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_alignParentTop="true"
        android:textColor="@color/title"
        android:textSize="@dimen/title_font_size"/>

    <TextView
        android:id="@+id/edit_desc"
        android:text="@string/change_desc_of_suit_description"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10sp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@id/title"/>

    <EditText
        android:id="@+id/edit_description"
        android:layout_height="wrap_content"
        android:layout_width="fill_parent"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:textSize="@dimen/edit_description_font_size"
        android:lines = "3"
        android:gravity="top"
        android:inputType="text"
        android:layout_marginTop="5sp"
        android:layout_below="@id/edit_desc"/>

    <Button
        android:id="@+id/btn_save"
        android:layout_height="40sp"
        android:layout_width="wrap_content"
        android:text="@string/save_data"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_below="@id/edit_description"/>

    <TextView
        android:id="@+id/cloth_decs"
        android:text="@string/the_cloth_in_suit_description"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10sp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@id/btn_save"/>

    <GridView xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/cloth_grid"
        android:layout_height="@dimen/cloth_grid_of_suit_height"
        android:layout_width="wrap_content"
        android:layout_marginTop="10sp"
        android:layout_marginBottom="10sp"
        android:padding="10dp"
        android:verticalSpacing="10dp"
        android:horizontalSpacing="10dp"
        android:numColumns="auto_fit"
        android:columnWidth="150dp"
        android:stretchMode="columnWidth"
        android:gravity="center"
        android:layout_below="@id/cloth_decs"/>

    <Button
        android:id="@+id/btn_delete"
        android:layout_height="40sp"
        android:layout_width="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:text="@string/deleteIt"
        android:layout_below="@id/cloth_grid"/>

    <Button
        android:id="@+id/btn_publish_suit"
        android:layout_height="40sp"
        android:layout_width="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerInParent="true"
        android:text="@string/publish_suit"
        android:layout_toEndOf="@id/btn_delete"
        android:layout_toRightOf="@id/btn_delete"
        android:layout_below="@id/cloth_grid"/>

    <Button
        android:id="@+id/btn_try_suit"
        android:layout_height="40sp"
        android:layout_width="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerInParent="true"
        android:text="@string/tryIt"
        android:layout_toEndOf="@id/btn_publish_suit"
        android:layout_toRightOf="@id/btn_publish_suit"
        android:layout_below="@id/cloth_grid"/>

    <Button
        android:id="@+id/btn_change_cloth"
        android:layout_height="40sp"
        android:layout_width="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:text="@string/modify"
        android:layout_toEndOf="@id/btn_try_suit"
        android:layout_toRightOf="@id/btn_try_suit"
        android:layout_below="@id/cloth_grid"/>

</RelativeLayout>