<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context=".AddClothActivity$PlaceholderFragment">

    <TextView
        android:text="@string/add_new_cloth"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_alignParentTop="true"
        android:textColor="@color/title"
        android:textSize="@dimen/title_font_size"/>

    <TextView
        android:id="@+id/description"
        android:text="@string/add_cloth_description"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:textColor="@color/description"
        android:textSize="@dimen/description_font_size" />

    <Button
        android:id="@+id/capture_image"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginTop="20sp"
        android:layout_alignParentRight="true"
        android:text="@string/get_image_from_camera"/>

    <Button
        android:id="@+id/btn_next_step"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_above="@id/capture_image"
        android:text="@string/choose_image_from_photoList"/>


</RelativeLayout>
