<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin">

    <TextView
        android:id="@+id/title"
        android:text="@string/add_new_suit_choose_cloth"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_alignParentTop="true"
        android:textColor="@color/title"
        android:textSize="@dimen/title_font_size"/>


    <TextView
        android:id="@+id/choose_cloth_description"
        android:text="@string/add_new_suit_choose_cloth_description"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:textColor="@color/description"
        android:textSize="@dimen/description_font_size"
        android:layout_marginTop="10sp"
        android:layout_below="@id/title"/>

    <Button
        android:id="@+id/btn_next_step"
        android:layout_height="40sp"
        android:layout_width="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:layout_marginTop="10sp"
        android:text="@string/next_step_description"/>

    <GridView xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/choose_cloth_grid"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:padding="5dp"
        android:verticalSpacing="10dp"
        android:horizontalSpacing="10dp"
        android:numColumns="auto_fit"
        android:columnWidth="@dimen/cloth_unit_width"
        android:stretchMode="columnWidth"
        android:gravity="center"
        android:layout_marginTop="10sp"
        android:layout_below="@id/choose_cloth_description"
        android:layout_above="@id/btn_next_step"/>

</RelativeLayout>